Add categories, 404, recommended. some small fixes.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,16 +5,16 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
             <h2>Flicker Images</h2>
-            <ul class="flicker_nav">
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-            </ul>
+            <!--<ul class="flicker_nav">-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+            <!--</ul>-->
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
