--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -113,148 +113,11 @@
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="content_bottom_right">
-                    <div class="single_bottom_rightbar">
-                        <h2>Recent Post</h2>
-                        <ul class="small_catg popular_catg wow fadeInDown">
-                            <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left">
-                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-                                </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading">
-                                            <a href="#">Duis condimentum nunc pretium lobortis </a>
-                                        </h4>
-                                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left">
-                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-                                </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                            lobortis </a>
-                                        </h4>
-                                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left">
-                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-                                </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                            lobortis </a>
-                                        </h4>
-                                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="single_bottom_rightbar">
-                        <ul role="tablist" class="nav nav-tabs custom-tabs">
-                            <li class="active" role="presentation">
-                                <a data-toggle="tab" role="tab" aria-controls="home" href="#mostPopular">Most Popular</a>
-                            </li>
-                            <li role="presentation">
-                                <a data-toggle="tab" role="tab" aria-controls="messages" href="#recentComent">Recent Comment</a>
-                            </li>
-                        </ul>
-                        <div class="tab-content">
-                            <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
-                                <ul class="small_catg popular_catg wow fadeInDown">
-                                    <li>
-                                        <div class="media wow fadeInDown">
-                                            <a class="media-left" href="#">
-                                            <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt="">
-                                        </a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="media wow fadeInDown">
-                                            <a class="media-left" href="#">
-                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="media wow fadeInDown">
-                                            <a class="media-left" href="#">
-                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div id="recentComent" class="tab-pane fade" role="tabpanel">
-                                <ul class="small_catg popular_catg">
-                                    <li>
-                                        <div class="media wow fadeInDown">
-                                            <a class="media-left" href="#">
-                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="media wow fadeInDown">
-                                            <a class="media-left" href="#">
-                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
+                    <app-recent></app-recent>
+
+                    <app-recommended></app-recommended>
+
                     <div class="single_bottom_rightbar">
                         <h2>Blog Archive</h2>
                         <div class="blog_archive wow fadeInDown">
