--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -37,14 +37,12 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav custom_nav">
                         <li class=""><a routerLink=""><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Home</a></li>
-                        <!--<li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Archives</a>-->
-                        <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="pages/archive-main.html">Archive</a></li>-->
-                        <!--<li><a href="pages/archive1.html">Archive 1</a></li>-->
-                        <!--<li><a href="pages/archive2.html">Archive 2</a></li>-->
-                        <!--<li><a href="pages/archive3.html">Archive 3</a></li>-->
-                        <!--</ul>-->
-                        <!--</li>-->
+                        <li class="dropdown"><a href="#" class="" data-toggle="dropdown" role="button"
+                                                aria-expanded="false">Categories</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li *ngFor="let cat of categories" ><a [routerLink]="['category', cat.slug]">{{cat.name}}</a></li>
+                            </ul>
+                        </li>
                         <li><a routerLink="page/contact"><i class="fa fa-book" aria-hidden="true"></i>&nbsp; Contact us</a>
                         </li>
                         <!--<li><a href="pages/404.html">404 page</a></li>-->
