--- a/src/app/pages/page404/page404.component.html
+++ b/src/app/pages/page404/page404.component.html
@@ -1,3 +1,16 @@
-<p>
-  page404 works!
-</p>
+<div class="container">
+    <section id="mainContent">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="error_page_content">
+                    <h1>404</h1>
+                    <h2>Something went wrong :(</h2>
+                    <h3>This page does not exist.</h3>
+                    <img height="300" [src]="'assets/images/fail.jpg'" alt="fail">
+                    <p class="wow fadeInLeftBig animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                        Please, continue to our <a href="../index.html">Home page</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
