fix some errors with image src, etc...

--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -24,7 +24,7 @@
                                 <div class="error_page_content">
                                     <h2>Something went wrong :(</h2>
                                     <h3>This category does not have posts yet.</h3>
-                                    <img height="300" [src]="'assets/images/fail.jpg'" alt="fail">
+                                    <img height="300" src="{{DEPLOY_PATH}}assets/images/fail.jpg" alt="fail">
                                     <p class="wow fadeInLeftBig animated" style="visibility: visible; animation-name: fadeInLeftBig;">Please, continue to our <a routerLink="">Home page</a></p>
                                 </div>
                             </ng-container>
