--- a/src/app/pages/page404/page404.component.html
+++ b/src/app/pages/page404/page404.component.html
@@ -6,9 +6,9 @@
                     <h1>404</h1>
                     <h2>Something went wrong :(</h2>
                     <h3>This page does not exist.</h3>
-                    <img height="300" [src]="'assets/images/fail.jpg'" alt="fail">
+                    <img height="300" src="{{DEPLOY_PATH}}assets/images/fail.jpg" alt="fail">
                     <p class="wow fadeInLeftBig animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                        Please, continue to our <a href="../index.html">Home page</a></p>
+                        Please, continue to our <a routerLink="">Home page</a></p>
                 </div>
             </div>
         </div>
