add pagination on category page, etc

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,16 +5,6 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
             <h2>Flicker Images</h2>
-            <!--<ul class="flicker_nav">-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
-            <!--</ul>-->
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
@@ -35,7 +25,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>About Us</h2>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed nec laoreet orci, eget ullamcorper quam. Phasellus lorem neque, </p>
+            <p>Данный ресурс находится на стадии "бета тестирования".</p>
           </div>
         </div>
       </div>
@@ -46,12 +36,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="index.html">magExpress</a></p>
+            <p>Copyright &copy; 2017 <a routerLink="">pb4life</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY WISE company.</p>
           </div>
         </div>
       </div>
