--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -2,14 +2,18 @@
     <section id="mainContent">
         <div class="content_bottom">
             <div class="col-lg-8 col-md-8">
-                <div class="content_bottom_left">
+                <div class="content_bottom_left" *ngIf="posts">
                     <div class="single_category wow fadeInDown animated"
                          style="visibility: visible; animation-name: fadeInDown;">
                         <div class="archive_style_1">
                             <h2><span class="bold_line"><span></span></span> <span class="solid_line"></span> <span
                                     class="title_text">{{categoryName}}</span></h2>
                             <ng-container *ngIf="show">
-                                <div class="single_archive wow fadeInDown animated" *ngFor="let post of posts"
+                                <div class="single_archive wow fadeInDown animated" *ngFor="let post of posts | paginate: { id: 'foo',
+                                                      itemsPerPage: perPage,
+                                                      currentPage: page,
+                                                      totalItems: posts.length
+                                                      }"
                                      style="visibility: visible; animation-name: fadeInDown;">
                                     <div class="archive_imgcontainer"><img [src]="post.thumbnail"
                                                                            [alt]="post.title.rendered"></div>
@@ -31,51 +35,58 @@
                         </div>
                     </div>
                 </div>
-                <div class="pagination_area" *ngIf="show">
-                    <nav>
-                        <ul class="pagination">
-                            <li><a href="#"><span aria-hidden="true">«</span><span class="sr-only">Previous</span></a>
-                            </li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#"><span aria-hidden="true">»</span><span class="sr-only">Next</span></a></li>
-                        </ul>
-                    </nav>
+                <div class="pagination_area" *ngIf="show && (this.posts.length > perPage)">{{page}}
+                    <pagination [totalItems]="posts.length" [(ngModel)]="page" [maxSize]="5" [itemsPerPage]="perPage"
+                                (pageChanged)="pageChanged($event)" class="pagination-sm"
+                                [boundaryLinks]="true"></pagination>
+                    <!--<pagination-template #p="paginationApi"-->
+                                         <!--(pageChange)="pageChange.emit($event)">-->
+                        <!--<nav>-->
+                            <!--<ul class="pagination">-->
+                                <!--<li [class.disabled]="p.isFirstPage()"><a *ngIf="!p.isFirstPage()" (click)="p.previous()"><span aria-hidden="true">«</span><span-->
+                                        <!--class="sr-only">Previous</span></a>-->
+                                <!--</li>-->
+                                <!--<li *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">-->
+                                    <!--<a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">{{ page.label }}</a>-->
+                                    <!--<ng-container *ngIf="p.getCurrent() === page.value">{{ page.label }}</ng-container>-->
+                                <!--</li>-->
+                                <!--<li><a href="#"><span aria-hidden="true">»</span><span class="sr-only">Next</span></a>-->
+                                <!--</li>-->
+                            <!--</ul>-->
+                        <!--</nav>-->
+                    <!--</pagination-template>-->
                 </div>
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="content_bottom_right">
 
-                    <app-recent></app-recent>
+                    <!--<app-recent></app-recent>-->
 
                     <app-recommended></app-recommended>
 
-                    <div class="single_bottom_rightbar">
-                        <h2>Blog Archive</h2>
-                        <div class="blog_archive wow fadeInDown animated"
-                             style="visibility: visible; animation-name: fadeInDown;">
-                            <form action="#">
-                                <select>
-                                    <option value="">Blog Archive</option>
-                                    <option value="">October(20)</option>
-                                </select>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="single_bottom_rightbar wow fadeInDown animated"
-                         style="visibility: visible; animation-name: fadeInDown;">
-                        <h2>Popular Lnks</h2>
-                        <ul>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Blog Home</a></li>
-                            <li><a href="#">Error Page</a></li>
-                            <li><a href="#">Social link</a></li>
-                            <li><a href="#">Login</a></li>
-                        </ul>
-                    </div>
+                    <!--<div class="single_bottom_rightbar">-->
+                        <!--<h2>Blog Archive</h2>-->
+                        <!--<div class="blog_archive wow fadeInDown animated"-->
+                             <!--style="visibility: visible; animation-name: fadeInDown;">-->
+                            <!--<form action="#">-->
+                                <!--<select>-->
+                                    <!--<option value="">Blog Archive</option>-->
+                                    <!--<option value="">October(20)</option>-->
+                                <!--</select>-->
+                            <!--</form>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="single_bottom_rightbar wow fadeInDown animated"-->
+                         <!--style="visibility: visible; animation-name: fadeInDown;">-->
+                        <!--<h2>Popular Lnks</h2>-->
+                        <!--<ul>-->
+                            <!--<li><a href="#">Blog</a></li>-->
+                            <!--<li><a href="#">Blog Home</a></li>-->
+                            <!--<li><a href="#">Error Page</a></li>-->
+                            <!--<li><a href="#">Social link</a></li>-->
+                            <!--<li><a href="#">Login</a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
