--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -8,18 +8,18 @@
             <div class="col-lg-8 col-md-8">
                 <div class="content_bottom_left" *ngIf="post">
                     <div class="single_page_area">
-                        <ol class="breadcrumb">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Technology</a></li>
-                            <li class="active">Duis quis erat non nunc fringilla</li>
-                        </ol>
+                        <!--<ol class="breadcrumb">-->
+                            <!--<li><a href="#">Home</a></li>-->
+                            <!--<li><a href="#" *ngIf="currentCategory">{{currentCategory}}</a></li>-->
+                            <!--<li class="active">Duis quis erat non nunc fringilla</li>-->
+                        <!--</ol>-->
                         <h2 class="post_titile">{{ post.title.rendered }}</h2>
                         <div class="single_page_content">
                             <div class="post_commentbox"><a href="#"><i class="fa fa-user"></i>{{author}}</a> <span><i
                                     class="fa fa-clock-o"></i>{{date_gmt}}</span> <a href="#"><i
                                     class="fa fa-tags"></i>Technology</a>
                             </div>
-                            <img class="img-center fancybox" [src]="post.thumbnail" alt="{{post.name}}">
+                            <img class="img-center" [src]="post.thumbnail" alt="{{post.name}}">
                             <div [innerHTML]="post.content.rendered"></div>
                             <!--<ul>-->
                             <!--<li>Nunc sed aliquet nisi. Nullam ut magna</li>-->
@@ -114,31 +114,31 @@
             <div class="col-lg-4 col-md-4">
                 <div class="content_bottom_right">
 
-                    <app-recent></app-recent>
+                    <!--<app-recent></app-recent>-->
 
                     <app-recommended></app-recommended>
 
-                    <div class="single_bottom_rightbar">
-                        <h2>Blog Archive</h2>
-                        <div class="blog_archive wow fadeInDown">
-                            <form action="#">
-                                <select>
-                                    <option value="">Blog Archive</option>
-                                    <option value="">October(20)</option>
-                                </select>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="single_bottom_rightbar wow fadeInDown">
-                        <h2>Popular Lnks</h2>
-                        <ul>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Blog Home</a></li>
-                            <li><a href="#">Error Page</a></li>
-                            <li><a href="#">Social link</a></li>
-                            <li><a href="#">Login</a></li>
-                        </ul>
-                    </div>
+                    <!--<div class="single_bottom_rightbar">-->
+                        <!--<h2>Blog Archive</h2>-->
+                        <!--<div class="blog_archive wow fadeInDown">-->
+                            <!--<form action="#">-->
+                                <!--<select>-->
+                                    <!--<option value="">Blog Archive</option>-->
+                                    <!--<option value="">October(20)</option>-->
+                                <!--</select>-->
+                            <!--</form>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="single_bottom_rightbar wow fadeInDown">-->
+                        <!--<h2>Popular Lnks</h2>-->
+                        <!--<ul>-->
+                            <!--<li><a href="#">Blog</a></li>-->
+                            <!--<li><a href="#">Blog Home</a></li>-->
+                            <!--<li><a href="#">Error Page</a></li>-->
+                            <!--<li><a href="#">Social link</a></li>-->
+                            <!--<li><a href="#">Login</a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
