--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -15,8 +15,9 @@
                                                       totalItems: posts.length
                                                       }"
                                      style="visibility: visible; animation-name: fadeInDown;">
-                                    <div class="archive_imgcontainer"><img [src]="post.thumbnail"
-                                                                           [alt]="post.title.rendered"></div>
+                                    <div class="archive_imgcontainer">
+                                        <img [src]="post.thumbnail" [alt]="post.title.rendered">
+                                    </div>
                                     <div class="archive_caption">
                                         <h2><a [routerLink]="['',post.slug]">{{post.title.rendered}}</a></h2>
                                         <p>{{post.excerpt.rendered}}</p>
