--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -10,18 +10,20 @@
                             </h2>
                         </div>
                     </div>
-                    <carousel [ngClass]="{latest_slider: true}" [interval]="myInterval" [noWrap]="noWrapSlides"
-                              [noPause]="noPause"
-                              [(activeSlide)]="activeSlideIndex">
-                        <slide *ngFor="let post of popularPosts;">
-                            <img class="single" [routerLink]="post.slug" [src]="post.thumbnail" alt="{{post.name}}">
+                    <!--<ng-container *ngIf="popularPosts">-->
+                        <carousel [ngClass]="{latest_slider: true}" [interval]="myInterval" [noWrap]="noWrapSlides"
+                                  [noPause]="noPause"
+                                  [(activeSlide)]="activeSlideIndex">
+                            <slide *ngFor="let post of popularPosts">
+                                <img class="single" [routerLink]="post.slug" [src]="getThumbnail(post, 'carousel')" alt="{{post.name}}">
 
-                            <div class="carousel-caption">
-                                <app-tags [post]="post"></app-tags>
-                                <h4>{{post.title.rendered}}</h4>
-                            </div>
-                        </slide>
-                    </carousel>
+                                <div class="carousel-caption">
+                                    <app-tags [post]="post"></app-tags>
+                                    <h4>{{post.title.rendered}}</h4>
+                                </div>
+                            </slide>
+                        </carousel>
+                    <!--</ng-container>-->
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm6">
                     <div class="content_top_right">
@@ -32,7 +34,7 @@
                         </div>
                         <ul class="featured_nav wow fadeInDown">
                             <li *ngFor="let post of latestPosts">
-                                <img [src]="post.thumbnail" alt="{{post.name}}">
+                                <img [src]="getThumbnail(post, 'medium_large')" alt="{{post.name}}">
                                 <div class="title_caption"><a [routerLink]="post.slug">{{post.title.rendered}}</a></div>
                             </li>
                         </ul>
@@ -55,7 +57,7 @@
                                         <li>
                                             <div class="catgimg2_container">
                                                 <a [routerLink]="post.slug">
-                                                    <img alt="{{post.name}}" [src]="post.thumbnail">
+                                                    <img alt="{{post.name}}" [src]="getThumbnail(post, 'carousel')">
                                                 </a>
                                             </div>
                                             <h2 class="catg_titile"><a
@@ -79,7 +81,7 @@
                                         <li>
                                             <div class="media wow fadeInDown">
                                                 <a class="media-left" [routerLink]="post.slug">
-                                                    <img alt="{{post.name}}" [src]="post.thumbnail">
+                                                    <img alt="{{post.name}}" [src]="getThumbnail(post, 'thumbnail')">
                                                 </a>
                                                 <div class="media-body">
                                                     <h4 class="media-heading"><a [routerLink]="post.slug">{{post.title.rendered}}</a>
@@ -242,25 +244,25 @@
                     <app-recommended></app-recommended>
 
                     <!--<div class="single_bottom_rightbar">-->
-                        <!--<h2>Blog Archive</h2>-->
-                        <!--<div class="blog_archive wow fadeInDown">-->
-                            <!--<form action="#">-->
-                                <!--<select>-->
-                                    <!--<option value="">Blog Archive</option>-->
-                                    <!--<option value="">October(20)</option>-->
-                                <!--</select>-->
-                            <!--</form>-->
-                        <!--</div>-->
+                    <!--<h2>Blog Archive</h2>-->
+                    <!--<div class="blog_archive wow fadeInDown">-->
+                    <!--<form action="#">-->
+                    <!--<select>-->
+                    <!--<option value="">Blog Archive</option>-->
+                    <!--<option value="">October(20)</option>-->
+                    <!--</select>-->
+                    <!--</form>-->
+                    <!--</div>-->
                     <!--</div>-->
                     <!--<div class="single_bottom_rightbar wow fadeInDown">-->
-                        <!--<h2>Popular Lnks</h2>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">Blog</a></li>-->
-                            <!--<li><a href="#">Blog Home</a></li>-->
-                            <!--<li><a href="#">Error Page</a></li>-->
-                            <!--<li><a href="#">Social link</a></li>-->
-                            <!--<li><a href="#">Login</a></li>-->
-                        <!--</ul>-->
+                    <!--<h2>Popular Lnks</h2>-->
+                    <!--<ul>-->
+                    <!--<li><a href="#">Blog</a></li>-->
+                    <!--<li><a href="#">Blog Home</a></li>-->
+                    <!--<li><a href="#">Error Page</a></li>-->
+                    <!--<li><a href="#">Social link</a></li>-->
+                    <!--<li><a href="#">Login</a></li>-->
+                    <!--</ul>-->
                     <!--</div>-->
                 </div>
             </div>
